[build-system]
requires = ["setuptools", "toml", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybkb"
version = "0.1.0"
description = "A python package to perform inference, learning, and analysis of Bayesian Knowledge Bases (BKBs)."
authors = [
    {name = "Chase Yakaboski", email = "chase.th@dartmouth.edu"}
    ]
license = {text = "MIT License"}
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ['pybkb']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "matplotlib>=3.5.3",
    "parse>=1.19.0",
    "progress>=1.6",
    "Sphinx>=5.3.0",
    "notebook>=6.5.2",
    "jupyter>=1.0.0",
    "netifaces>=0.11.0",
    "seaborn>=0.12.2",
    "toml>=0.10.2"
]

[project.scripts]